--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -89,16 +89,19 @@ header {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 90vh;
-  .title{
+  height: 700px;
+
+  .title {
     font-size: 30px;
   }
-  &_wrap{
+
+  &_wrap {
     position: absolute;
     top: 30px;
     left: 40vw;
   }
-  &_symbol{
+
+  &_symbol {
     box-shadow: 0 2px 5px rgba(0,0,0,0.26);
     position: absolute;
     top: 120px;
@@ -106,7 +109,8 @@ header {
     transform-origin: center;
     transform: rotate(270deg);
     z-index: 3;
-    p{
+
+    p {
       white-space: nowrap;
       display: block;
       font-size: 30px;
@@ -116,6 +120,7 @@ header {
       background-color: #F27676;
     }
   }
+
   &_view {
     box-shadow: 0 2px 5px rgba(0,0,0,0.26);
     position: absolute;
@@ -127,36 +132,91 @@ header {
     width: 1000px;
     height: 500px;
     background: white;
-    &_sentence{
 
-
+    &_sentence {
       width: 400px;
       height: 440px;
       padding-right: 20px;
     }
-    &_img{
 
+    &_img {
       padding-left: 20px;
       height: 440px;
       width: 400px;
-      img{
+
+      img {
         width: 100%;
         height: 100%;
         -o-object-fit: cover;
         object-fit: cover;
       }
     }
-
   }
-  &_backgreen{
-    position: absolute;
-    bottom: 0;
 
+  &_backgreen {
+    position: fixed;
+    bottom: 0;
+    z-index: -1;
     content: "";
     background-color: #78CC75;
     width: 100vw;
     height: 350px;
+  }
+}
 
+.oldposts {
+  width: 1000px;
+  margin: 0 auto;
+
+  .oldposts_post {
+    margin: -40px 0;
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 400px;
+    width: 100%;
+
+    &_title {
+      h1 {
+        top: 160px;
+        position: absolute;
+        width: 45vw;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      hr {
+        width: 50vw;
+        position: absolute;
+        border: solid 2px #F27676;
+      }
+    }
+
+    &_image {
+      height: 100%;
+      display: block;
+
+      img {
+        width: auto;
+        height: 100%;
+      }
+    }
+  }
+}
+
+.oldposts_post:nth-child(odd) {
+  .oldposts_post_image {
+    order: -1;
+  }
+
+  .oldposts_post_title {
+    hr,h1 {
+      text-align: right;
+      right: 0;
+    }
   }
 }
 
@@ -231,13 +291,13 @@ main {
     }
   }
 }
-
 // ハンバーガーメニュー
 .hammenu {
   position: relative;
   width: 100vw;
   top: 0;
   left: 0;
+
   &_icon {
     position: fixed;
     z-index: 100;
@@ -295,7 +355,8 @@ main {
         background-color: #fbfbfb;
         transition: all 300ms ease 0.3s;
         transform: translateX(100%);
-        ul{
+
+        ul {
           font-size: 1.5em;
           display: flex;
           flex-direction: column;
@@ -382,6 +443,10 @@ main {
         img {
           display: none;
         }
+      }
+
+      & > *:last-child {
+        padding-bottom: 50vh;
       }
     }
   }
