--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -179,7 +179,7 @@ header form .secrch_icon {
 }
 
 .oldposts .oldposts_post_title hr {
-  width: 50vw;
+  width: 600px;
   position: absolute;
   border: solid 2px #F27676;
 }
