--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -189,7 +189,7 @@ header {
       }
 
       hr {
-        width: 50vw;
+        width: 600px;
         position: absolute;
         border: solid 2px #F27676;
       }
