--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -1,2 +1,4 @@
+
+script(src="script/vue.min.js")
 script(type="text/javascript" src="script/jquery-3.3.1.min.js")
 script(type="text/javascript" src="script/script.js")
