--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -169,7 +169,7 @@ header {
   margin: 0 auto;
 
   .oldposts_post {
-    margin: -40px 0;
+    margin: 50px 0;
     position: relative;
 
     display: flex;
@@ -339,30 +339,32 @@ main {
     left: 0;
     position: fixed;
     z-index: -1;
-    transition: all 700ms;
+    transition: all 200ms ease;
 
     &_screen {
       position: absolute;
-      right: 0;
-      width: 30%;
+      left: 0;
+      width: 80%;
       height: 100vh;
       display: flex;
       justify-content: space-around;
+    }
+  }
+  .menucontent {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 20%;
+    height: 100%;
+    background-color: #fbfbfb;
+    transition: all 300ms ease ;
+    transform: translateX(100%);
 
-      .menucontent {
-        width: 100%;
-        height: 100%;
-        background-color: #fbfbfb;
-        transition: all 300ms ease 0.3s;
-        transform: translateX(100%);
-
-        ul {
-          font-size: 1.5em;
-          display: flex;
-          flex-direction: column;
-          align-items: stretch;
-        }
-      }
+    ul {
+      font-size: 1.5em;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
     }
   }
 }
