--- a/index.pug
+++ b/index.pug
@@ -29,6 +29,8 @@ html(lang="en")
         post
         post
         post
+        post
+        
         
       
         //- +Posts('学校課題作品「積乱雲」','material/image_7.jpg')
