--- a/section.pug
+++ b/section.pug
@@ -8,7 +8,7 @@ html(lang="en")
         img(src="material/rbhugram.svg")
     main
       include includes/hide.pug
-      div.sec_container
+      div.sec_container#section
         div.textbox.contents_box
           div.textbox_section
             //- section
