--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -499,3 +499,15 @@ main .container .work:hover > .titlebox {
 .hide_anime {
   opacity: 0;
 }
+
+.thumbnail {
+  width: calc(100vw / 6);
+  height: 400px;
+}
+
+.thumbnail img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
