--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -523,3 +523,15 @@ main {
 .hide_anime {
   opacity: 0;
 }
+// allpost ------------------------------------
+.thumbnail{
+  width: calc(100vw / 6);
+  height: 400px;
+
+  img{
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+}
